[project]
name = "repo_standards_validator"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
  "structlog==25.5.0",
  "pygithub==2.8.1",
  "GitPython==3.1.44",
  "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "ruff==0.14.10",
  "vulture==2.14",
  "ty==0.0.5",
  "check-jsonschema==0.34.0",
]

[tool.uv]
required-version = "~=0.9.0"
package = false
override-dependencies = ["urllib3==2.6.0"]

[tool.setuptools]
py-modules = ["validator", "tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D101", "D102", "D103", "SLF001", "FBT001", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tests"]

[tool.vulture]
ignore_names = ["owner", "side_effect"]
